--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Navbar-->
     <div class="navbar">
       <div class="container flex">
-        <h1 class="logo">Lalani</h1>
+        <h1 class="logo">{s0mE L0gO}</h1>
         <nav>
           <ul>
             <li><a href="index.html">Дома</a></li>
@@ -39,10 +39,10 @@
             voluptatem reiciendis minima animi, dignissimos accusantium
             consectetur nam voluptate ex fugit aut!
           </p>
-          <a href="features.html" class="btn btn-outline">Read more</a>
+          <a href="features.html" class="btn btn-outline">Повеќе</a>
         </div>
         <div class="showcase-form card">
-          <h2>Овде као нешто за пополнување</h2>
+          <h2>Овде пополни за да ти досадваме по маил</h2>
           <form
             name="contact"
             method="POST"
@@ -69,7 +69,7 @@
             <div class="form-control">
               <input type="email" name="email" placeholder="E-mail" required />
             </div>
-            <input type="submit" value="Send" class="btn btn-primary" />
+            <input type="submit" value="Испрати" class="btn btn-primary" />
           </form>
         </div>
       </div>
@@ -87,17 +87,17 @@
           <div>
             <i class="fas fa-server fa-3x"></i>
             <h3>10,349,405</h3>
-            <p class="text-secondary">Deployments</p>
+            <p class="text-secondary">Ке4фрејз 1</p>
           </div>
           <div>
             <i class="fas fa-upload fa-3x"></i>
             <h3>987 blablaits</h3>
-            <p class="text-secondary">Published</p>
+            <p class="text-secondary">Ке4фрејз 2</p>
           </div>
           <div>
             <i class="fas fa-project-diagram fa-3x"></i>
             <h3>2.344.123</h3>
-            <p class="text-secondary">Projects</p>
+            <p class="text-secondary">Ке4фрејз 3</p>
           </div>
         </div>
       </div>
@@ -108,10 +108,12 @@
       <div class="container grid">
         <img src="images/cli.png" alt="" />
         <div class="card">
-          <h3>Easy to use, cross platform CLI</h3>
+          <h3>
+            Овде некоја доскочица во стил: "Сакам да ме бива, ама не ме бива"
+          </h3>
         </div>
         <div class="card">
-          <h3>Deploy in seconds</h3>
+          <h3>Овде нешто друго семесинаповско</h3>
         </div>
       </div>
     </section>
@@ -120,11 +122,12 @@
     <section class="cloud bg-primary my-2 py-2">
       <div class="container grid">
         <div class="text-center">
-          <h2 class="lg">Extreme Cloud Hosting</h2>
+          <h2 class="lg">Тука некој наслов као битен</h2>
           <p class="lead my-1">
-            Cloud hosting like you've never seen. Fast, efficient and scalable
+            Овде во неколку зборој опишано зошто е битен наслово, колку да се
+            излажиш за да кликниш, а десно некоја слика колку да има нешто 👉
           </p>
-          <a href="features.html" class="btn btn-dark">Read More</a>
+          <a href="features.html" class="btn btn-dark">Повеќе</a>
         </div>
         <img src="images/cloud.png" alt="" />
       </div>
@@ -132,7 +135,7 @@
 
     <!-- Languages-->
     <section class="languages">
-      <h2 class="md text-center my-2">Supported languages</h2>
+      <h2 class="md text-center my-2">Шо би сакал да знам во животот</h2>
       <div class="container flex">
         <div class="card">
           <h4>Node.js</h4>
@@ -173,14 +176,14 @@
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
         <div>
-          <h1>Lalani</h1>
+          <h1>DeveloperPropo</h1>
           <p>Copyright &copy; 2021</p>
         </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="features.html">Features</a></li>
-            <li><a href="docs.html">Docs</a></li>
+            <li><a href="index.html">Дома</a></li>
+            <li><a href="features.html">Фичрс</a></li>
+            <li><a href="docs.html">Документчиња</a></li>
           </ul>
         </nav>
         <div class="social">
