--- a/docs.html
+++ b/docs.html
@@ -1,110 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/utilities.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/utilities.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Web site | Некаков web сајт</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--Navbar-->
     <div class="navbar">
-        <div class="container flex">
-            <h1 class="logo">Lalani</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Дома</a></li>
-                    <li><a href="features.html">Фичрс</a></li>
-                    <li><a href="docs.html">Документчиња</a></li>
-                </ul>
-            </nav>
-        </div>
+      <div class="container flex">
+        <h1 class="logo">{s0mE L0gO}</h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Дома</a></li>
+            <li><a href="features.html">Фичрс</a></li>
+            <li><a href="docs.html">Документчиња</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
 
     <!-- HEADER-->
     <section class="docs-head bg-primary py-3">
-        <div class="container grid">
-            <div>
-                <h1 class="xl">Docs</h1>
-                <p>Learn how to work with the Lalani platform</p>
-            </div>
-            <img src="images/docs.png" alt="">
+      <div class="container grid">
+        <div>
+          <h1 class="xl">Документчиња</h1>
+          <p>Тука као некои битни документчиња би се наоѓале</p>
         </div>
+        <img src="images/docs.png" alt="" />
+      </div>
     </section>
 
     <!-- Docs main -->
     <section class="docs-main my-4">
-        <div class="container grid">
-            <div class="card bg-light p-3">
-                <h3 class="my-2">Essentials</h3>
-                <nav>
-                    <ul>
-                        <li><a class="text-primary" href="#">Introduction</a></li>
-                        <li><a href="#">About Lalani</a></li>
-                        <li><a href="#">Instalation</a></li>
-                    </ul>
-                </nav>
+      <div class="container grid">
+        <div class="card bg-light p-3">
+          <h3 class="my-2">Битни линкој</h3>
+          <nav>
+            <ul>
+              <li>
+                <a class="text-primary" href="#"
+                  >Активно кликнат линк (зато е син)</a
+                >
+              </li>
+              <li><a href="#">Некој линк као</a></li>
+              <li><a href="#">Битен линк исто</a></li>
+            </ul>
+          </nav>
 
-                <h3 class="my-2">Deployment</h3>
-                <nav>
-                    <ul>
-                        <li><a href="#">Setting up a container</a></li>
-                        <li><a href="#">Using the CLI</a></li>
-                        <li><a href="#">Managing resources</a></li>
-                        <li><a href="#">Upgrade & downgrade</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="card">
-                <h2>Introduction</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde debitis voluptates earum, architecto praesentium perferendis provident eligendi eius impedit, amet quae. Illo dolore a veniam optio, minus tempore vel cupiditate.</p>
-                <div class="alert alert-success">
-                    <i class="fas fa-info"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga veritatis laborum ipsa ipsum, obcaecati facere?
-                </div>
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos voluptates illo veniam temporibus rerum in consequuntur ipsa vero eveniet eius.</p>
-                <a href="#" class="btn btn-primary">Install CLI</a>
-                <h3>Requirements</h3>
-                <ul>
-                    <li>Windows 10, Mac OSX, Linux</li>
-                    <li>Node.js v12 or higher</li>
-                </ul>
-
-                <h3>Install</h3>
-                <p>Mac kflsdjfkls</p>
-                <pre><code>$ brew install lalani-cli</code></pre>
-                <p>NPM</p>
-                <pre><code>$ npm install lalani-cli</code></pre>
-                <p>Yarn</p>
-                <pre><code>$ yarn install lalani-cli</code></pre>
-            </div>
+          <h3 class="my-2">Некој друг отсек со линкој</h3>
+          <nav>
+            <ul>
+              <li><a href="#">Линкове линкове</a></li>
+              <li><a href="#">Уште линкове</a></li>
+              <li><a href="#">Пак линк</a></li>
+              <li><a href="#">Битни рабоќе</a></li>
+            </ul>
+          </nav>
         </div>
-    </section>
+        <div class="card">
+          <h2>Нешто битно напишано</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde
+            debitis voluptates earum, architecto praesentium perferendis
+            provident eligendi eius impedit, amet quae. Illo dolore a veniam
+            optio, minus tempore vel cupiditate.
+          </p>
+          <div class="alert alert-success">
+            <i class="fas fa-info"></i>Некое инфо за нешто битно, некоја мудра
+            мисла, џр-мр ово оно нешто изнаџграбано, затоа има знакче онакво i
+            напред, демек импортант нешто.
+          </div>
+          <h3>Танта бејеза, сјенто ке пердидо ла кабеза</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos
+            voluptates illo veniam temporibus rerum in consequuntur ipsa vero
+            eveniet eius.
+          </p>
+          <a href="#" class="btn btn-primary">Инсталирај</a>
+          <h3>Овде као некои риквајерментс</h3>
+          <ul>
+            <li>Windows 10, Mac OSX, Linux</li>
+            <li>Node.js v12 or higher</li>
+            <li>... абе онака лупетам колку да има нешто</li>
+          </ul>
 
+          <h3>Тука као за инсталирање нешто</h3>
+          <p>Mac ово оно</p>
+          <pre><code>$ brew install lalani-cli</code></pre>
+          <p>NPM џр-мр</p>
+          <pre><code>$ npm install lalani-cli</code></pre>
+          <p>Yarn (ако имав да понудам нешто)</p>
+          <pre><code>$ yarn install lalani-cli</code></pre>
+        </div>
+      </div>
+    </section>
 
     <!--Footer-->
     <footer class="footer bg-dark py-5">
-        <div class="container grid grid-3">
-            <div>
-                <h1>Lalani</h1>
-                <p>Copyright &copy; 2021</p>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="docs.html">Docs</a></li>
-                </ul>
-            </nav>
-            <div class="social">
-                <a href="#"><i class="fab fa-github fa-3x"></i></a>
-                <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-3x"></i></a>
-                <a href="#"><i class="fab fa-twitter fa-3x"></i></a>
-            </div>
+      <div class="container grid grid-3">
+        <div>
+          <h1>DeveloperPropo</h1>
+          <p>Copyright &copy; 2021</p>
         </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Дома</a></li>
+            <li><a href="features.html">Фичрс</a></li>
+            <li><a href="docs.html">Документчиња</a></li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href="#"><i class="fab fa-github fa-3x"></i></a>
+          <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
+          <a href="#"><i class="fab fa-instagram fa-3x"></i></a>
+          <a href="#"><i class="fab fa-twitter fa-3x"></i></a>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
